--- a/_posts/2014-09-22-this-blog.md
+++ b/_posts/2014-09-22-this-blog.md
@@ -18,4 +18,4 @@ tags : [Blog]
 
 ~~现在博客的架构是：Ghost中文版，服务器是部署在Digitalocean的纽约3号服务器（我不会告诉你纽约的服务器比旧金山不知稳定多少，亲身体验），环境是Ubuntu14.04+Nginx+MySQL，图片等静态资源存储在七牛云，域名和SSL证书是从Namecheap购得，至于这个https，除了逼格高之外，对避免被墙也有一定作用。~~
 
-不说了我又回到Jekyll，托管在Github，懒得折腾了。。
+不说了我又回到Jekyll，托管在Github，懒得折腾了。但是这个作为Jekyll上写blog的主题是我自己基于Jekyll_bootstrap这个框架写出来的。在一些标签的样式方面采用的是[Cayman theme](https://github.com/jasonlong/cayman-theme)。如果喜欢这个我改写后的blog主题，可以在我的Github主页fork这个博客项目，然后在\_posts文件夹中添加自己的文章。
