--- a/_posts/2014-09-22-this-blog.md
+++ b/_posts/2014-09-22-this-blog.md
@@ -9,6 +9,8 @@ tags : [Blog]
 
 记得最早是在大一的时候，先是经常看csdn和博客园的博客，自己也在上面写了一些学习笔记，后来看到[酷壳](http://coolshell.cn)做的非常好，接着就发现了Wordpress，然后在寒假赶在开学前一个星期做出了一个和酷壳一样的Wordpress博客，随便买了个虚拟主机，并且用我的名字注册了域名，那个时候感觉vps还是很贵很高大上的东西。
 
+<!--break-->
+
 搭建博客这个东西，开始一发不可收拾。大二时github异常火爆，不可避免的，发现了github pages这个东西，同时也是经常看[王垠的博客](http://yinwang.org)，于是开始了用jekyll来生成静态博客，然后提交到我的tcitry.github.io项目中，也是这一段时间学会了用git这个会使幸福感提升N倍的代码管理工具。
 
 然后呢，大三上学期的时候，在我忍受github龟速的同时，国内的git社区已经非常成熟了，有非常多的组织和公司推出了git服务，但很少能有像github这样各方面都很贴心和高大上的，直到我从oschina，csdn，gitcafe，gitshell等众多社区中发现了coding.net，coding.net从UI到功能做的都非常全面，另一方面在教育网和移动网的访问速度非常快，还有演示功能，相当于一个app engine了。以前我在github提交代码的时候光等git push完事就要好久，现在在coding.net绝对是秒秒钟的事，心情顺畅了很多，现在我一些私有的项目就都托管在coding.net了。
