--- a/_posts/2014-09-22-this-blog.md
+++ b/_posts/2014-09-22-this-blog.md
@@ -9,9 +9,9 @@ title: 这个博客
 
 搭建博客这个东西，开始一发不可收拾。大二时github异常火爆，不可避免的，发现了github pages这个东西，同时也是经常看[王垠的博客](http://yinwang.org)，于是开始了用jekyll来生成静态博客，然后提交到我的tcitry.github.io项目中，也是这一段时间学会了用git这个会使幸福感提升N倍的代码管理工具。
 
-然后呢，大三上学期的时候，在我忍受github龟速的同时，国内的git社区已经非常成熟了，有非常多的组织和公司推出了git服务，但很少能有像github这样各方面都很贴心和高大上的，直到我从oschina，csdn，gitcafe，gitshell等众多社区中发现了coding.net，coding.net从UI到功能做的都非常全面，另一方面在教育网和移动网的访问速度非常快，还有演示功能，相当于一个app engine了。以前我在github提交代码的时候光等git push完事就要好久，现在在coding.net绝对是秒秒钟的事，心情顺畅了很多，现在我一些私有的项目就都托管在coding.net了。
+然后呢，大三上学期的时候，在我忍受github龟速的同时，国内的git社区已经非常成熟了，有非常多的组织和公司推出了git服务，但很少能有像github这样各方面都很贴心和高大上的，直到我从oschina，csdn，gitcafe，gitshell等众多社区中发现了Coding，Coding从UI到功能做的都非常全面，另一方面在教育网和移动网的访问速度非常快，还有演示功能，相当于一个app engine了。以前我在github提交代码的时候光等git push完事就要好久，现在在Coding绝对是秒秒钟的事，心情顺畅了很多，现在我一些私有的项目就都托管在Coding了。
 
-话说回来，我在大三寒假发现了一个新的静态网页生成器--hexo，是台湾一个大学生用node.js写的，试用了以后果断放弃了jekyll，投入hexo怀抱，用hexo感觉很酷的样子，每次在本地用markdown编辑器写完博客，`hexo g`、`hexo d`直接就部署在coding.net了，还备份了文件，感觉以后终于可以不再折腾了。可是，好景不长，因为我遇见了ghost(也是node.js系)。。。
+话说回来，我在大三寒假发现了一个新的静态网页生成器--hexo，是台湾一个大学生用node.js写的，试用了以后果断放弃了jekyll，投入hexo怀抱，用hexo感觉很酷的样子，每次在本地用markdown编辑器写完博客，`hexo g`、`hexo d`直接就部署在Coding了，还备份了文件，感觉以后终于可以不再折腾了。可是，好景不长，因为我遇见了ghost(也是node.js系)。。。
 
 终究是我这个人在做博客的时候有一颗追求完美的心(这是病，得治)，不想停下来，而且花费了大量的时间，为什么选择ghost呢，它一需要自己部署，二需要花钱养着vps，三还得经常备个份。我觉得，ghost可以让我专注博客，而不是在模板，样式上花费太多的时间，顶多就是部署程序的时候稍微费点心，备份文件也需要点工夫，仅此而已，可以接受，话说我还是挺喜欢在自己的服务器上折腾Linux的东西，另外我在github pack上面拿到了digitalocean的$100和namecheap的一年SSL证书，可以用一段时间了。可是这样说着说着好像自己又绕了回来，怎么和Wordpress有点像呢，都是搭建服务器，这大学三年就没点进步？额，可是我确实通过这些学到了很多前端的知识。
 
