--- a/_posts/2014-09-22-this-blog.md
+++ b/_posts/2014-09-22-this-blog.md
@@ -15,7 +15,7 @@ title: 这个博客
 
 终究是我这个人在做博客的时候有一颗追求完美的心(这是病，得治)，不想停下来，而且花费了大量的时间，为什么选择ghost呢，它一需要自己部署，二需要花钱养着Vps，三还得经常备个份。我觉得，Ghost可以让我专注博客，而不是在模板，样式上花费太多的时间，顶多就是部署程序的时候稍微费点心，备份文件也需要点工夫，仅此而已，可以接受，话说我还是挺喜欢在自己的服务器上折腾Linux的东西，另外我在Github Pack上面拿到了Digitalocean的$100和Namecheap的一年SSL证书，可以用一段时间了。可是这样说着说着好像自己又绕了回来，怎么和Wordpress有点像呢，都是搭建服务器，这大学三年就没点进步？额，可是我确实通过这些学到了很多前端的知识。
 
-~~现在博客的架构是：Ghost中文版，服务器是部署在Digitalocean的纽约3号服务器（我不会告诉你纽约的服务器比旧金山不知稳定多少，亲身体验），环境是Ubuntu14.04+Nginx+MySQL，图片等静态资源存储在七牛云，域名和SSL证书是从Namecheap购得，至于这个Https，除了逼格高之外，对避免被墙也有一定作用。~~
+<del>现在博客的架构是：Ghost中文版，服务器是部署在Digitalocean的纽约3号服务器（我不会告诉你纽约的服务器比旧金山不知稳定多少，亲身体验），环境是Ubuntu14.04+Nginx+MySQL，图片等静态资源存储在七牛云，域名和SSL证书是从Namecheap购得，至于这个Https，除了逼格高之外，对避免被墙也有一定作用。</del>
 
-不说了我又回到Jekyll，托管在Github，因为很喜欢这个主题。
+现在我又回到Jekyll，托管在Github，因为很喜欢这个主题。
 
