--- a/_posts/2014-09-22-this-blog.md
+++ b/_posts/2014-09-22-this-blog.md
@@ -13,7 +13,7 @@ title: 这个博客
 
 话说回来，我在大三寒假发现了一个新的静态网页生成器--Hexo，是台湾一个大学生用Node.Js写的，试用了以后果断放弃了Jekyll，投入Hexo怀抱，用Hexo感觉很酷的样子，每次在本地用Markdown编辑器写完博客，`hexo g`、`hexo d`直接就部署在Coding了，还备份了文件，感觉以后终于可以不再折腾了。可是，好景不长，因为我遇见了Ghost(也是Node.Js系)。。。
 
-终究是我这个人在做博客的时候有一颗追求完美的心(这是病，得治)，不想停下来，而且花费了大量的时间，为什么选择Ghost呢，它一需要自己部署，二需要花钱养着Vps，三还得经常备个份。我觉得，Ghost可以让我专注博客，而不是在模板，样式上花费太多的时间，顶多就是部署程序的时候稍微费点心，备份文件也需要点工夫，仅此而已，可以接受，话说我还是挺喜欢在自己的服务器上折腾Linux的东西，另外我在Github Pack上面拿到了Digitalocean的$100和Namecheap的一年SSL证书，可以用一段时间了。可是这样说着说着好像自己又绕了回来，怎么和Wordpress有点像呢，都是搭建服务器，这大学三年就没点进步？额，可是我确实通过这些学到了很多前端的知识。
+终究是我这个人在做博客的时候有一颗追求完美的心(这是病，得治)，不想停下来，而且花费了大量的时间，为什么选择Ghost呢，它一需要自己部署，二需要花钱养着Vps，三还得经常备个份。我觉得，Ghost可以让我专注博客，而不是在模板，样式上花费太多的时间，顶多就是部署程序的时候稍微费点心，备份文件也需要点工夫，仅此而已，可以接受，话说我还是挺喜欢在自己的服务器上折腾Linux的东西，另外我在Github Pack上面拿到了Digitalocean的$100和Namecheap的一年SSL证书，可以用一段时间了。可是这样说着说着好像自己又绕了回来，怎么和Wordpress有点像呢，都是搭建服务器，这大学三年就没点进步？额，至少我通过这些学到了一些前端的知识吧。。
 
 <del>现在博客的架构是：Ghost中文版，服务器是部署在Digitalocean的纽约3号服务器（我不会告诉你纽约的服务器比旧金山不知稳定多少，亲身体验），环境是Ubuntu14.04+Nginx+MySQL，图片等静态资源存储在七牛云，域名和SSL证书是从Namecheap购得，至于这个Https，除了逼格高之外，对避免被墙也有一定作用。</del>
 
