--- a/_posts/2014-09-22-this-blog.md
+++ b/_posts/2014-09-22-this-blog.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: 这个博客
+category: tech
+tags: [Hexo, Ghost, Jekyll, blog]
 ---
 
 关于我的博客，技术架构上已经有了很多的版本，我对做一个自己的博客是这么的着迷，现在想一想，如果不是真的想做，是不可能这么折腾的。
