update thumb links

--- a/_posts/2014-09-22-this-blog.md
+++ b/_posts/2014-09-22-this-blog.md
@@ -19,5 +19,5 @@ tags: [Hexo, Ghost, Jekyll, blog]
 
 <del>现在博客的架构是：Ghost中文版，服务器是部署在Digitalocean的纽约3号服务器（我不会告诉你纽约的服务器比旧金山不知稳定多少，亲身体验），环境是Ubuntu14.04+Nginx+MySQL，图片等静态资源存储在七牛云，域名和SSL证书是从Namecheap购得，至于这个Https，除了逼格高之外，对避免被墙也有一定作用。</del>
 
-现在我又回到Jekyll，托管在Github，因为很喜欢这个主题。
+现在我又回到Jekyll，托管在Github，因为很喜欢这个[主题](https://github.com/fooleap/fooleap.github.io)。
 
