--- a/_posts/2014-09-22-this-blog.md
+++ b/_posts/2014-09-22-this-blog.md
@@ -1,8 +1,6 @@
 ---
 layout: post
 title: 这个博客
-category: tech
-tags: [Hexo, Ghost, Jekyll, blog]
 ---
 
 关于我的博客，技术架构上已经有了很多的版本，我对做一个自己的博客是这么的着迷，现在想一想，如果不是真的想做，是不可能这么折腾的。
@@ -19,5 +17,5 @@ tags: [Hexo, Ghost, Jekyll, blog]
 
 <del>现在博客的架构是：Ghost中文版，服务器是部署在Digitalocean的纽约3号服务器（我不会告诉你纽约的服务器比旧金山不知稳定多少，亲身体验），环境是Ubuntu14.04+Nginx+MySQL，图片等静态资源存储在七牛云，域名和SSL证书是从Namecheap购得，至于这个Https，除了逼格高之外，对避免被墙也有一定作用。</del>
 
-现在我又回到Jekyll，托管在Github，因为很喜欢这个[主题](https://github.com/fooleap/fooleap.github.io)。
+现在我又回到Jekyll，托管在Github，因为很喜欢这个主题。
 
