--- a/_posts/2016-09-21-to-dlpuer.md
+++ b/_posts/2016-09-21-to-dlpuer.md
@@ -3,6 +3,6 @@ layout: post
 title: 致大连工业大学的开发者
 ---
 
-希望我们可以一起做一些有趣的项目，可以先联系管理员(tcitry@gmail.com)，加入我们的github群组。或者参与gitter聊天室。
+希望我们可以一起做一些有趣的项目，可以先联系管理员(tcitry@gmail.com)，加入我们的[Github群组](http://github.com/dlpu)。或者参与gitter聊天室。
 
-我们的[github群组](http://github.com/dlpu)
+[![Gitter](https://badges.gitter.im/dlpu/dlpu.github.io.svg)](https://gitter.im/dlpu/dlpu.github.io?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge)
